Improve description of credentials resources
The documentation of the update credentials operation now
describes in detail the steps taken for replacing or merging credentials'
secrets.
Also improved code for merging credentials and secrets and added unit
tests.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>